# EBOOK-ISBN-Finder

./: README.md  install.ps1  install.sh  isbn.py  pyproject.toml
chrome_extension/: background.js  manifest.json
chrome_extension/host/: install_host.ps1  install_host.sh  isbn_native_host.py  isbn_wrapper.sh
context_menu/: create_macos_quickaction.sh  isbn-renamer.desktop  launcher.bat  nautilus_script  register_windows.ps1
